syntax = "proto3";

package monitoring;

service MonitoringService {
  // Records an action performed by a user
  rpc RecordAction(RecordActionRequest) returns (RecordActionResponse);

  // Records an error that occurred in the system
  rpc RecordError(RecordErrorRequest) returns (RecordErrorResponse);

  // Lists all actions recorded in the system
  rpc ListActions(ListActionsRequest) returns (ListActionsResponse);

  // Lists all errors recorded in the system
  rpc ListErrors(ListErrorsRequest) returns (ListErrorsResponse);
}

// --- Messages for RecordAction ---
message RecordActionRequest {
  string user_id = 1;
  string user_email = 2;
  string action = 3; // e.g., "CREATE_USER", "GET_INVOICE_BY_ID"
  string method = 4; // e.g., "POST", "GET"
  string url = 5;
}

message RecordActionResponse {
  string message = 1;
}

// --- Messages for RecordError ---
message RecordErrorRequest {
  string user_id = 1;
  string user_email = 2;
  string error_message = 3; // e.g., "Permission denied"
  string service = 4; // e.g., "billing-service"
}

message RecordErrorResponse {
  string message = 1;
}

// --- Messages for ListActions ---
message Action {
  string id = 1;
  string user_id = 2;
  string user_email = 3;
  string action = 4;
  string method = 5;
  string url = 6;
  string timestamp = 7;
}

message ListActionsRequest {}

message ListActionsResponse {
  repeated Action actions = 1;
}

// --- Messages for ListErrors ---
message Error {
  string id = 1;
  string user_id = 2;
  string user_email = 3;
  string error_message = 4;
  string service = 5;
  string timestamp = 6;
}

message ListErrorsRequest {}

message ListErrorsResponse {
  repeated Error errors = 1;
}
